# WorkPodd

./: .gitignore  FEATURES.md  README.md
backend/: pyproject.toml
backend/app/: __init__.py  main.py  models.py
backend/app/agent/: __init__.py  conversational.py  graph.py  interactive.py  prescreen_graph.py  session_memory.py  system_prompt.py  tools.py
backend/app/data/: crm_profiles.json  fraud_policy.md  refund_policy.md  refund_policy_supplement.md
backend/app/data/chroma_fraud/: chroma.sqlite3
backend/app/data/chroma_refund_policy/: chroma.sqlite3
backend/app/db/: __init__.py  database.py  schema.sql  seed.py
backend/app/rag/: __init__.py  fraud_index.py  policy_index.py  refund_policy_index.py
backend/app/services/: customer_decisions.py  evidence_store.py  evidence_verification.py  fraud_detection.py  log_bus.py  product_classification.py  realtime.py  refund_decisions.py  refund_evaluation.py  return_prescreening.py
frontend/: index.html  package-lock.json  package.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo
frontend/src/: App.tsx  styles.css
frontend/src/components/: AdminActiveTickets.tsx  AdminDashboard.tsx  BrandLogo.tsx  ChatPanel.tsx  ContactSupportOptions.tsx  ImageUploadPrompt.tsx  LoginPage.tsx  PolicyAnswer.tsx  PolicySectionContent.tsx  PurchaseSelector.tsx  ReasonOptions.tsx  RefundDecisionCard.tsx  ReturnDetailsPrompt.tsx  TicketEvidenceGallery.tsx  TicketSupportFallback.tsx  VoicePanel.tsx
frontend/src/lib/: api.ts  customerPersonalization.ts  evidence.ts  policyContent.ts  returnWindow.ts
