[project]
name = "ai-refund-agent-backend"
version = "0.1.0"
description = "FastAPI backend for an AI customer support refund agent."
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "python-dotenv>=1.0.1",
  "langgraph>=0.2.0",
  "langchain-openai>=0.1.20",
  "chromadb>=0.5.0",
  "httpx>=0.27.0",
  "opencv-python-headless>=4.10.0",
  "pillow>=10.0.0",
  "torch>=2.2.0",
  "transformers>=4.40.0",
]

[project.optional-dependencies]
dev = [
  "ruff>=0.6.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.ruff]
line-length = 100
target-version = "py311"
